# data_mining_group_9_assignment_1

./: .gitignore  README.md  data_example.txt.dvc  pyproject.toml  report.docx  report.tex
.dvc/: config
data/: 1b_dataset_cleaned.parquet.dvc  1b_dataset_target_splits.parquet.dvc  dataset_mood_smartphone.csv.dvc
src/: arima_cross_patient.ipynb  task1a_eda.py  task1b_cleaning.py  task1c_features.py  task2a_classification.py  task2b_kaggle.txt  task3_association_rules.txt  task4_regression.py  task5a_metrics_theory.txt  task5b_metrics_applied.py
src/1b_data_cleaning/: data_cleaning.ipynb  data_splitting.ipynb
src/1c_feature_engineering/: feature_engineering_rnn.ipynb
src/1c_feature_engineering_non_temporal/: feature_engineering.ipynb
src/2a_classification_non_temporal/: classification.ipynb
src/2a_classification_temporal/: classification_rnn.ipynb
src/2b_regression_non_temporal/: regression.ipynb
src/4_regression_temporal/: feature_engineering_and_modelling_rnn.ipynb
src/utils/: baseline.py  data.py  feature_engineering.py  metrics.py  rnn_modeling.py
