[tool.poetry]
name = "data-mining-group-9-assignment-1"
version = "0.1.0"
description = ""
authors = ["miautawn <miautawn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^3.0.2"
numpy = "^2.4.4"
scikit-learn = "^1.8.0"
pre-commit = "^4.5.1"
ruff = "^0.15.8"
ipykernel = "^7.2.0"
pyarrow = "^23.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
