[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["miautawn <miautawn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
pandas = "^3.0.2"
numpy = "^2.4.4"
scikit-learn = "^1.8.0"
scipy = "^1.16.2"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
pre-commit = "^4.5.1"
ruff = "^0.15.8"
ipykernel = "^7.2.0"
pyarrow = "^23.0.1"
tqdm = "^4.67.3"
pmdarima = "^2.0.4"
torch = {version = "^2.11.0+cpu", source = "pytorch_cpu"}

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
